--- a/STUDY.Personal.SnakeGame/Properties/Resources.resx
+++ b/STUDY.Personal.SnakeGame/Properties/Resources.resx
@@ -117,6 +117,14 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Dead Banner" xml:space="preserve">
+    <value>╔═══════════════════════════╗
+║                           ║
+║       You are dead!       ║
+║       Score:              ║
+║                           ║
+╚═══════════════════════════╝</value>
+  </data>
   <data name="PauseGameBanner" xml:space="preserve">
     <value>╔═══════════════════════════╗
 ║                           ║
