deadbanner score + option to start new game added

--- a/STUDY.Personal.SnakeGame/Properties/Resources.resx
+++ b/STUDY.Personal.SnakeGame/Properties/Resources.resx
@@ -118,12 +118,15 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="Dead Banner" xml:space="preserve">
-    <value>╔═══════════════════════════╗
-║                           ║
-║       You are dead!       ║
-║       Score:              ║
-║                           ║
-╚═══════════════════════════╝</value>
+    <value>╔═════════════════════════════════════╗
+║                                     ║
+║            You are dead!            ║
+║              Score:                 ║
+║  Press [Enter] to start a new game  ║
+║       or anything else to exit      ║
+║                                     ║
+╚═════════════════════════════════════╝
+</value>
   </data>
   <data name="PauseGameBanner" xml:space="preserve">
     <value>╔═══════════════════════════╗
