--- a/STUDY.Personal.SnakeGame/Properties/Resources.resx
+++ b/STUDY.Personal.SnakeGame/Properties/Resources.resx
@@ -117,7 +117,7 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Dead Banner" xml:space="preserve">
+  <data name="DeadBanner" xml:space="preserve">
     <value>╔═════════════════════════════════════╗
 ║                                     ║
 ║            You are dead!            ║
@@ -128,12 +128,26 @@
 ╚═════════════════════════════════════╝
 </value>
   </data>
-  <data name="PauseGameBanner" xml:space="preserve">
+  <data name="PauseBanner" xml:space="preserve">
     <value>╔═══════════════════════════╗
 ║                           ║
 ║        GAME PAUSED        ║
 ║  press [SPACE] to resume  ║
 ║                           ║
 ╚═══════════════════════════╝</value>
+  </data>
+  <data name="SnakeAscii" xml:space="preserve">
+    <value>
+           _________         _________
+          /         \       /         \
+         /  /~~~~~\  \     /  /~~~~~\  \
+         |  |     |  |     |  |     |  |
+         |  |     |  |     |  |     |  |
+         |  |     |  |     |  |     |  |         /
+         |  |     |  |     |  |     |  |       //
+        (o  o)    \  \_____/  /     \  \_____/ /
+         \__/      \         /       \        /
+          |         ~~~~~~~~~         ~~~~~~~~
+          ^</value>
   </data>
 </root>
