--- a/STUDY.Personal.SnakeGame/Properties/Resources.resx
+++ b/STUDY.Personal.SnakeGame/Properties/Resources.resx
@@ -118,14 +118,15 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="DeadBanner" xml:space="preserve">
-    <value>╔════════════════════════════════════════╗
-║                                        ║
-║              You are dead!             ║
-║              Score:                    ║
-║  Press [Enter] to return to main menu  ║
-║       or anything else to exit         ║
-║                                        ║
-╚════════════════════════════════════════╝</value>
+    <value>╔═════════════════════════════════════╗
+║                                     ║
+║            You are dead!            ║
+║              Score:                 ║
+║  Press [Enter] to start a new game  ║
+║       or anything else to exit      ║
+║                                     ║
+╚═════════════════════════════════════╝
+</value>
   </data>
   <data name="PauseBanner" xml:space="preserve">
     <value>╔═══════════════════════════╗
